# ASALI

./: .gitattributes  .gitignore  .travis.yml  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  _config.yml  index.html  index.md
GUI/: DOCKER.md  LINUX.md  MINGW64.md  README.md  TODO.md  app.py  asali.spec  pyproject.toml  setup.iss
GUI/Docker/: Dockerfile  docker-compose.yml
GUI/Docker/sharedFolder/: CO-O2-CO2.py  H2-O2-H2O.py  H2-O2-Rh.xml
GUI/Ubuntu/: DEVELOPER.md  Dockerfile  Dockerfile.alpine  Dockerfile.ubuntu.20.04  MEMO.md  Makefile  Makefile.asali  Makefile.cantera  Makefile.docker  Makefile.libs  app.py  asali.spec  build.sh  compile.sh  dockerfile  environment.yml  run-docker.sh
GUI/Ubuntu/chemkin/: kinetic.kin  thermo.tdc  transport.tra
GUI/Ubuntu/database/: CO-O2-CO2.py  H2-O2-Rh.yaml  H2-O2.json  data.yaml  names.tiff  species.asali
GUI/Ubuntu/include/: Asali.hpp  AsaliGui.hpp  asaliCatalystProperties.hpp  asaliFileManager.hpp  asaliGui.hpp  asaliInterface.hpp  asaliKineticMaker.hpp  asaliPlot.hpp  asaliProperties.hpp  asaliUnitConversionUtils.hpp  asaliVectorUtils.hpp  basicInterface.hpp  basicProperties.hpp  batchEquations.hpp  batchReactor.hpp  beerQuote.hpp  bvpInterface.hpp  canteraInterface.hpp  catalyticPellet.hpp  catalyticPelletEquations.hpp  catalyticReactors.hpp  catalyticReactorsEquations.hpp  chemkinConverter.hpp  cstrEquations.hpp  cstrReactor.hpp  equilibriumCalculator.hpp  het1dEquations.hpp  het1dReactor.hpp  linearRegression.hpp  (+12 more)
GUI/Windows/: SConstruct
GUI/chemkin/: kinetic.kin  transport.tra
GUI/database/: udk.json
(+808 files in other folders)
